Fix some device state bugs
Controller:
- Incorrect value passed for dropdowns.
- Add message when a device has no options.
- Troubleshoot: Update wording when plugdev perms are root.
- Add ellipsis when name too long (DeathAdder Essential White)
- Add DPI unit to state info.

--- a/source/sass/components/_content.scss
+++ b/source/sass/components/_content.scss
@@ -65,6 +65,10 @@ content {
     }
 }
 
+.device-simple-msg {
+    padding: 15px 30px;
+}
+
 .group-hint {
     padding: 0.5em 1.5em;
 }
